force-app/main/default/objects/Attendant__c/Attendant__c.object-meta.xml
<CustomObject>
    <label>Attendant</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>