force-app/main/default/objects/Attendant__c/fields/Meetings__c.field-meta.xml
<CustomField>
    <fullName>Meetings__c</fullName>
    <label>Meetings</label>
    <referenceTo>Meetings__c</referenceTo>
    <relationshipLabel>Attendants</relationshipLabel>
    <relationshipName>Attendants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>