force-app/main/default/objects/Attendant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision maker</fullName>
            </value>
            <value>
                <fullName>Final user</fullName>
            </value>
            <value>
                <fullName>Financial decision maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Oppositor</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>